# maia2-shogi

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreate.sh
data/: example_sfen.txt  example_visualization.html
scripts/: run_maia2_predict_sfen.py  run_maia2_visualize_samples.py
